force-app/main/default/objects/HP_QuestionFAQ__c/HP_QuestionFAQ__c.object-meta.xml
<CustomObject>
    <label>Question FAQ</label>
    <nameField>
        <displayFormat>QuestionFAQ-{000000}</displayFormat>
        <label>QuestionFAQ Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questions FAQ</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>