force-app/main/default/objects/HP_QuestionFAQ__c/fields/HP_Categorie__c.field-meta.xml
<CustomField>
    <fullName>HP_Categorie__c</fullName>
    <label>Catégorie</label>
    <length>100</length>
    <type>Text</type>
</CustomField>