force-app/main/default/objects/HP_QuestionFAQ__c/fields/HP_IdDigital__c.field-meta.xml
<CustomField>
    <fullName>HP_IdDigital__c</fullName>
    <externalId>true</externalId>
    <label>ID Digital</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>