force-app/main/default/objects/HP_QuestionFAQ__c/fields/HP_Path__c.field-meta.xml
<CustomField>
    <fullName>HP_Path__c</fullName>
    <label>Path</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>