force-app/main/default/objects/HP_QuestionFAQ__c/fields/HP_SousCategorie__c.field-meta.xml
<CustomField>
    <fullName>HP_SousCategorie__c</fullName>
    <label>Sous Catégorie</label>
    <length>100</length>
    <type>Text</type>
</CustomField>