force-app/main/default/objects/HP_QuestionFAQ__c/fields/HP_Titre__c.field-meta.xml
<CustomField>
    <fullName>HP_Titre__c</fullName>
    <label>Titre</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>