force-app/main/default/objects/HP_QuestionFAQ__c/fields/HP_VoteNegatifs__c.field-meta.xml
<CustomField>
    <fullName>HP_VoteNegatifs__c</fullName>
    <label>Vote Négatifs</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>