force-app/main/default/objects/HP_QuestionFAQ__c/fields/HP_VotePositifs__c.field-meta.xml
<CustomField>
    <fullName>HP_VotePositifs__c</fullName>
    <label>Vote Positifs</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>